# window-identify

./: About.txt  CMakeLists.txt  Make.bat
src/: windowinfo.cpp  windowinfo.h  winidentify.cpp  winidentify.h  winidentify.rc
test/: Make.bat  hexView.cpp  resource.h  test.cpp  test.rc
